[gd_scene load_steps=15 format=3 uid="uid://b5mep53bqhlrk"]

[ext_resource type="Texture2D" uid="uid://c82akoyw0qcep" path="res://assets/art/ui/Rubberduck.png" id="1_aegs1"]
[ext_resource type="Script" path="res://scenes/rubber_ducky_page/rubber_ducky_button.gd" id="2_4f77f"]
[ext_resource type="Texture2D" uid="uid://8i3pj215u3j6" path="res://assets/art/ui/rubberduck_fragment.png" id="3_pyk5f"]
[ext_resource type="Texture2D" uid="uid://dov0tkj3njqct" path="res://assets/art/characters/eddy_the_jungler.png" id="4_80tm8"]
[ext_resource type="Texture2D" uid="uid://i04xwwg61loo" path="res://assets/art/particles/random_selection.png" id="4_ghef2"]

[sub_resource type="Animation" id="Animation_0b2a4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:custom_minimum_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(500, 500)]
}

[sub_resource type="Animation" id="Animation_fg7pc"]
resource_name = "pop"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(500, 500), Vector2(1000, 1000)]
}

[sub_resource type="Animation" id="Animation_f4vid"]
resource_name = "tapped"
length = 0.5
capture_included = true
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 2,
"values": [0.261799, -0.261799, 0.174533, -0.174533, 0.0872665]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qv6m6"]
_data = {
"RESET": SubResource("Animation_0b2a4"),
"pop": SubResource("Animation_fg7pc"),
"tapped": SubResource("Animation_f4vid")
}

[sub_resource type="Gradient" id="Gradient_gufg5"]
offsets = PackedFloat32Array(0.0102041, 0.139456, 0.765306, 1)
colors = PackedColorArray(0.996078, 0.968627, 0, 0, 0.996078, 0.968627, 0, 1, 0.878431, 0.537255, 0, 1, 0.878431, 0.537255, 0, 0)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_3gavf"]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_nf6i5"]
_data = [Vector2(0, 0), 0.0, 1.4, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_6hc45"]
offsets = PackedFloat32Array(0.00680272, 0.159864, 0.846939, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 1, 0.968198, 0.968198, 0.968198, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_1ji1f"]
colors = PackedColorArray(0.882353, 1, 0, 1, 1, 1, 0.490196, 1)

[node name="RubberDuckyButton" type="TextureButton"]
custom_minimum_size = Vector2(500, 500)
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(250, 250)
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("1_aegs1")
texture_pressed = ExtResource("1_aegs1")
texture_hover = ExtResource("1_aegs1")
texture_disabled = ExtResource("1_aegs1")
texture_focused = ExtResource("1_aegs1")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_4f77f")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_qv6m6")
}

[node name="PopCPUParticles2D" type="CPUParticles2D" parent="."]
unique_name_in_owner = true
position = Vector2(500, 500)
emitting = false
amount = 24
lifetime = 2.0
one_shot = true
preprocess = 0.5
speed_scale = 1.5
explosiveness = 0.9
randomness = 0.4
lifetime_randomness = 0.1
texture = ExtResource("3_pyk5f")
emission_shape = 1
emission_sphere_radius = 50.0
spread = 180.0
gravity = Vector2(0, 50)
initial_velocity_min = 80.0
initial_velocity_max = 200.0
angular_velocity_min = -10.0
angular_velocity_max = 20.0
linear_accel_min = -20.0
linear_accel_max = 50.0
damping_min = 10.0
damping_max = 50.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 0.5
scale_amount_max = 2.0
color_ramp = SubResource("Gradient_gufg5")

[node name="HeroShineCPUParticles2D" type="CPUParticles2D" parent="."]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_3gavf")
position = Vector2(250, 250)
emitting = false
amount = 4
local_coords = true
texture = ExtResource("4_ghef2")
gravity = Vector2(0, 0)
angle_max = 360.0
scale_amount_min = 2.0
scale_amount_max = 2.5
scale_amount_curve = SubResource("Curve_nf6i5")
color_ramp = SubResource("Gradient_6hc45")
color_initial_ramp = SubResource("Gradient_1ji1f")
anim_offset_max = 1.0

[node name="HeroUnlockButton" type="TextureButton" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(300, 0)
layout_mode = 0
offset_left = 100.0
offset_top = 100.0
offset_right = 400.0
offset_bottom = 400.0
pivot_offset = Vector2(150, 150)
texture_normal = ExtResource("4_80tm8")
ignore_texture_size = true
stretch_mode = 0

[node name="UnlockedLabel" type="Label" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 130.0
offset_top = 350.0
offset_right = 402.0
offset_bottom = 441.0
theme_type_variation = &"HeaderMedium"
text = "Congrats!
You unlocked FRED!"
horizontal_alignment = 1

[node name="UnlockNextHeroButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 48
text = "Unlock another hero!"

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="HeroUnlockButton" to="." method="_on_hero_unlock_button_pressed"]
[connection signal="pressed" from="UnlockNextHeroButton" to="." method="_on_unlock_next_hero_button_pressed"]
